kustomize/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cncf-demo
  labels:
    app.kubernetes.io/name: cncf-demo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cncf-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cncf-demo
    spec:
      containers:
        - name: main
          image: "index.docker.io/vfarcic/cncf-demo"
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
